--- a/1.5/Languages/ChineseSimplified/DefInjected/PawnKindDef/PawnKinds_Anneli_Gakuen.xml
+++ b/1.5/Languages/ChineseSimplified/DefInjected/PawnKindDef/PawnKinds_Anneli_Gakuen.xml
@@ -15,6 +15,7 @@
   <Anneli_Gakuen_Ouenbuin_CheerLeader.label>学园_应援部部员</Anneli_Gakuen_Ouenbuin_CheerLeader.label>
   <Anneli_Gakuen_Ouenbuin_SailorSuit.label>学园_应援部部员</Anneli_Gakuen_Ouenbuin_SailorSuit.label>
   <Anneli_Gakuen_Kendobuin.label>学园_剑道部部员</Anneli_Gakuen_Kendobuin.label>
+  <Anneli_Gakuen_Kyudobuin.label>学园_弓道部部员</Anneli_Gakuen_Kyudobuin.label>
 
 
 </LanguageData>
