--- a/1.4/Languages/ChineseSimplified/DefInjected/ThingDef/Apparel_4.xml
+++ b/1.4/Languages/ChineseSimplified/DefInjected/ThingDef/Apparel_4.xml
@@ -25,4 +25,10 @@
   <Anneli_Gakuen_CamoArmorBikini.description>不可染色.</Anneli_Gakuen_CamoArmorBikini.description>
 
 
+  <!-- Anneli_Gakuen_Chestguard -->
+
+  <Anneli_Gakuen_Chestguard.label>(学园)4_护胸</Anneli_Gakuen_Chestguard.label>
+  <Anneli_Gakuen_Chestguard.description>可染色.</Anneli_Gakuen_Chestguard.description>
+
+
 </LanguageData>
